# TFG-Hermandades

./: README.md  main.py  pyproject.toml
backend/: .coverage  .env.example  .gitignore  db.sqlite3  requirements.txt
backend/api/: admin.py  models.py  pagination.py  serializers.py  services.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_acto_areainteres_cuerpopertenencia_tipoacto_and_more.py  0002_remove_hermano_estado_hermano_and_more.py  0003_alter_tipoacto_tipo.py  0003_remove_hermano_first_name_remove_hermano_last_name.py  0004_alter_papeletasitio_estado_papeleta.py  0004_hermano_genero_hermano_telefono.py  0005_alter_puesto_numero_maximo_asignaciones.py  0005_hermano_fecha_nacimiento.py  0006_acto_fin_solicitud_cirios_and_more.py  0006_hermano_codigo_postal_hermano_direccion.py  0007_alter_papeletasitio_codigo_verificacion.py  0007_hermano_comunidad_autonoma_hermano_localidad_and_more.py  0008_hermano_estado_civil.py  0008_tramo_papeletasitio_tramo.py  0009_hermano_fecha_bautismo_hermano_lugar_bautismo_and_more.py  0009_remove_tramo_color_cera_tramo_numero_maximo_cirios.py  0010_areainteres_hermano_areas_interes.py  0010_puesto_cortejo_cristo.py  0011_acto_modalidad_and_more.py  0011_alter_hermano_areas_interes.py  0012_acto_tipoacto_alter_hermano_areas_interes_puesto_and_more.py  0012_alter_papeletasitio_es_solicitud_insignia_and_more.py  0013_cuerpopertenencia_hermanocuerpo_hermano_cuerpos.py  0013_remove_papeletasitio_solicita_cirio_si_denegado_and_more.py  0014_hermano_esadmin.py  0014_papeletasitio_lado_papeletasitio_orden_en_tramo.py  0015_alter_acto_modalidad.py  (+41 more)
backend/backend/: settings.py  urls.py
frontend/: .env.production  index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js
(+398 files in other folders)
