[project]
name = "tfg-hermandades"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref>=3.11.0",
    "django>=6.0",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "mysqlclient>=2.2.7",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.1",
    "pytz>=2025.2",
    "qrcode[pil]>=8.2",
    "reportlab>=4.4.9",
    "sqlparse>=0.5.5",
]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
    "pytest-django>=4.11.1",
]

[tool.pytest.ini_options]

DJANGO_SETTINGS_MODULE = "backend.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--cov=api --cov-report=html --cov-report=term-missing"
django_find_project = true

[tool.coverage.run]
source = ["api"]
omit = [
    "**/migrations/**",
    "**/__init__.py",
    "**/admin.py",
    "**/apps.py",
    "**/manage.py",
    "backend/*",
]

[tool.coverage.report]

exclude_lines = [
    "pragma: no cover",
    "def __str__",
    "if __name__ == .__main__.:",
]
show_missing = true
